# hypercli

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Example.py  Example_revamped.py  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mkdocs_publish.yml  pypi_publish.yml
Reference/: index.html
Wiki/: index.html
docs/: Reference.md  Wiki.md  index.md  index.rst
docs/source/: conf.py  hypercli.rst  index.rst
docs/stylesheets/: extra.css
hypercli/: __init__.py  core.py
search/: search_index.json
